<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSingUp.StartUpScreen"
    android:background="@color/white"
    android:padding="30dp"
    android:transitionName="transition_StartUp_screen"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/login_logo"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/login_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:text="@string/login_tag_line"
            android:textAlignment="center"
            android:textSize="19sp"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="0dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:insetBottom="0dp"
                android:onClick="callServiceCenterLoginScreen"
                android:text="@string/service_center_login"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:transitionName="transition_login"
                 />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:insetBottom="0dp"
                android:onClick="callCustomerLoginScreen"
                android:text="@string/customer_login"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:transitionName="transition_customerLogin"
                tools:ignore="ButtonStyle" />


        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:fontFamily="monospace"
            android:includeFontPadding="false"
            android:text="@string/help"
            android:textColor="@color/black" />

    </LinearLayout>


</ScrollView>